Wed Nov 21 12:54:42 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/rundig.html: Added note about effect of changing database_base.

	* htmerge/docs.cc (convertDocs): Changed confusing message about
	total doc db size in stats.

Wed Nov 21 11:37:52 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/TemplateList.cc (createFromString), htdoc/attrs.html:
	Treat template_map as a _quoted_ string list.  Change <i> tags to
	the HTML-4.0 compliant <em> tags in builtin-long template.

Tue Nov 20 17:13:27 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/String.cc (String, append, sub): Added checks for negative
	lengths or start position to make code more fault-tolerant.

Tue Nov 20 16:37:26 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Synonym.cc (createDB): Check for lines with less than
	2 words, to avoid segfault caused by calling Database::Put() with
	negative length for data field.

Sat Nov  3 23:55:00 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/htString.h: Add #include for ostream.h to solve compile
	problems with gcc3.

	* htlib/Connection.h, htlib/Connection.cc: Backport Connection
	class from 3.2 code--installs alarm() call to timeout connections
	and will retry connections a few times before giving up.

Fri Nov  2 12:28:35 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc, htdoc/attrs.html: Added support for dc.date,
	dc.date.created and dc.date.modified to use_doc_date handling.

Fri Nov  2 12:12:59 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/xmlsearch.README, contrib/xmlsearch.tar.gz: Added files
	contributed by Nathan Hand and me to implement XML output from
	htsearch, including DTD, templates and config file.

Fri Nov  2 12:05:49 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (do_tag), htcommon/defaults.cc: Added ignore_alt_text
	attribute to avoid indexing alt text in img tags.